test/types/range/bradc/strideRangeSlice.good
rAll is: 1..10
rAllSlice = 3..7 by 2
rAllSlice = 2..8 by 2
rAllSlice = 3..8
rAllSlice = 2..8
strideRangeSlice.chpl:21: error: halt reached - range slice out of bounds: 0..11
